--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body {
   #leftContent {
       margin-bottom: 20px;
       margin-right: 0;
-      
+
   }
 
   #logo {
@@ -219,7 +219,7 @@ body {
   }
 
   #background {
-      background-image: url("images/bg-mobile.svg");
+      background-image: url("images/bg-mobile.png");
       height: 100%;
       top: 0;
   }
